--- a/temp22.html
+++ b/temp22.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -41,4 +41,31 @@
 
     </script>
   </body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <img src="assets/ball.png" width="100" id="ball">
+    <script>
+        ball.style.position = 'absolute';
+        let t = 0;
+        let l = 0;
+        function ballFall(){
+            t++
+            if(t > 500) {
+                t = 1;
+                l = Math.random() * 500;
+            }  
+            ball.style.top = t + 'px';
+            ball.style.left = l + 'px';
+            setTimeout(ballFall,1)
+        }
+        ballFall();
+    </script>
+</body>
 </html>
