--- a/temp23.html
+++ b/temp23.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <img src="assets/ball.png" width="100" id="ball">
-    <script>
-        ball.style.position = 'absolute';
-        let t = 0;
-        let l = 0;
-        function ballFall(){
-            t++
-            if(t > 500) {
-                t = 1;
-                l = Math.random() * 500;
-            }  
-            ball.style.top = t + 'px';
-            ball.style.left = l + 'px';
-            setTimeout(ballFall,1)
-        }
-        ballFall();
-    </script>
+    <div class="container-fluid">
+        <div class="row bg-dark text-white">
+            <div class="d-flex justify-content-between">
+                <div>
+                    <h1>My Store</h1>
+                </div>
+                <div>
+                    <p>Home|Cart|Login</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-lg-4">
+                <div class="bg-primary m-3 p-3">HTML</div>
+            </div>
+            <div class="col-lg-4">
+                <div class="bg-success m-3 p-3">CSS</div>
+            </div>
+            <div class="col-lg-4">
+                <div class="bg-danger m-3 p-3">JAVASCRIPT</div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="box">Hello World</div> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
